account-card-info-k8s-manifest-sit.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-card-info-api
  namespace: account-card-info-sit
spec:
  selector:
    matchLabels:
      app: account-card-info-api
  replicas: 1
  template:
    metadata:
      labels:
        app: account-card-info-api
    spec:
      containers:
      - name: account-card-info-api
        image: "" #Todo add the ECR image name
        ports:
        - containerPort: 3010
        resources:
          requests:
            memory: 400M
            cpu: 100m
          limits:
            memory: 500M
            cpu: 400
        livenessProbe:
          httpGet:
            path: /health
            port: 3010
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 3010
          initialDelaySeconds: 3
          periodSeconds: 3
        volumeMounts:
        - mountPath: "/opt/"
          name: oracle-client
          readOnly: true
        - mountPath: "/applogs"
          subPath: "applogs"
          name: oracle-client
          readOnly: false

---
apiVersion: v1
kind: Service
metadata:
  name: account-card-info-api-svc
  namespace: account-card-info-sit
  labels:
    svc: account-card-info-api-svc
  spec:
    ports:
      - name: http-api-port
        port: 3010
    selector: 
      app: account-card-info-api
    type: ClusterIP
