account-card-info-istio-manifest-sit.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata: 
  name: account-card-info-api-vs
  namespace: account-card-info-sit
spec:
  hosts:
    - '*' # TODO add exact host like cloudapiyat.ratnakarbank.in
  gateways:
    - istio-system/istio-gateway
  http:
    - match:
        - uri:
            prefix: / # TODO add extact prefix
      route:
        - destination:
            host: account-card-info-api-svc
          headers:
            response:
              add:
                X-Frame-Options: DENY
                X-XSS-Protection: "1; mode=block"
                Strict-Transport-Security: "max-age=31536000; includeSubdomains; perload"
              remove:
              - "server"
              set: 
                access-control-allow-origin: "*.ratnakarbank.in"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata: 
  name: account-card-info-api-vs
  namespace: account-card-info-sit
spec:
  host: account-card-info-api-svc
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
